--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,8 @@
+#Server Configuration
 server.port=8080
 domain.name=localhost
+
+#Logging Configuration.
+logging.level.org.springframework.web=ERROR
+logging.level.com.mkyong=DEBUG
+logging.file=${java.io.tmpdir}/shortener-application.log
